# lenslab

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  justfile
.ai/rules/: rust.md
.ai/skills/github-pr-ci-status/: SKILL.md
.ai/skills/lenslab-pr-readiness/: SKILL.md
.ai/skills/post-work-compounding/: SKILL.md
.ai/skills/rustup-repair/: SKILL.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
agent-skills/lens-test/: SKILL.md
agent-skills/lens-test/references/: interpreting-results.md  manual-uat.md  reshoot-coaching.md  shooting-guide.md
agent-skills/lens-test/references/examples/: inconclusive-aperture-ladder-checklist.md  inconclusive-aperture-ladder.json  inconclusive-missing-lens-identity-checklist.md  inconclusive-missing-lens-identity.json  inconclusive-target-qa-checklist.md  inconclusive-target-qa.json  supported-centred-checklist.md  supported-centred.json  supported-decentred-checklist.md  supported-decentred.json
docs/: ALGORITHMS.md  DECISIONS.md  GENESIS.md  ROADMAP.md  SKILL_PLUGIN.md  SPEC.md  release-process.md
docs/solutions/architecture/: artefact-commands-validate-output-before-expensive-work.md  decode-boundary-preserves-sensor-data.md  machine-readable-commands-validate-before-stdout.md  metric-aggregators-validate-public-schema-inputs.md  profile-correlation-overlap-blockers.md  straight-line-metrics-trace-polarity-and-side-bands.md  target-qa-aggregate-gates-validate-frame-evidence.md
lenslab-cli/: Cargo.toml
lenslab-cli/src/: analyse.rs  contact.rs  main.rs
lenslab-cli/tests/: analyse_cli.rs  contact_cli.rs  lens_test_skill_contract.rs  local_copy_assessment_cli.rs  local_vignetting_cli.rs
lenslab-core/: Cargo.toml
lenslab-core/src/: channels.rs  image.rs  lib.rs  metrics.rs  schema.rs  zones.rs
lenslab-core/src/metrics/: acutance.rs  ca.rs  copy_assessment.rs  decentring.rs  distortion.rs  field_curvature.rs  target_qa.rs  vignetting.rs
lenslab-decode/: Cargo.toml
lenslab-decode/src/: frame_info.rs  lib.rs  rawler_decoder.rs  tiff_decoder.rs
plugin/.claude-plugin/: plugin.json
plugin/skills/lens-test/: SKILL.md
reference/prototype/: README.md  analyze.py  batch.py  contact.py  dng.py  ljpeg.c  vign.py
scripts/: fetch-dng-fixtures.sh  release-prep.sh
tests/fixtures/dng/: bayer_k1.exiftool.txt  xtrans_xt3.exiftool.txt
