[package]
name = "lenslab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "lenslab command-line interface"

[[bin]]
name = "lenslab"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
lenslab-core = { path = "../lenslab-core" }
lenslab-decode = { path = "../lenslab-decode" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tiff.workspace = true

[features]
real-fixtures = []
