[package]
name = "lenslab-decode"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "lenslab raw decode backend (LGPL-2.1 boundary, see NOTICE)"

[lints]
workspace = true

[dependencies]
exif.workspace = true
rawler.workspace = true
serde.workspace = true
thiserror.workspace = true
tiff.workspace = true

[dev-dependencies]
tempfile.workspace = true
