[package]
name = "lenslab-decode"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "lenslab raw decode backend (LGPL-2.1 boundary, see NOTICE)"

[lints]
workspace = true

[dependencies]
exif.workspace = true
lenslab-core = { path = "../lenslab-core" }
rawler.workspace = true
serde.workspace = true
thiserror.workspace = true
tiff.workspace = true

[features]
real-fixtures = []

[dev-dependencies]
tempfile.workspace = true
